# SoloShuffleDiscordNotifier

./: Cargo.toml  Settings.yaml
src/: main.rs
